--- a/examples/reservoir_simulation/Norne/src/conf/DECK_CONFIG.yaml
+++ b/examples/reservoir_simulation/Norne/src/conf/DECK_CONFIG.yaml
@@ -129,7 +129,7 @@ custom:
     Do_param_method: "VCAE"            # Parameterization method: "DCT" or "VCAE"
     DCT: 15                            # Percentage of DCT coefficients retained (10-50%)
     Pretrained_Model: "Yes"            # Use pretrained generative model [Yes/No]
-    Train_Moe: "MoE"                   # Model training: "FNO" or "MoE" (Mixture of Experts)
+    Train_Moe: "FNO"                   # Model training: "FNO" or "MoE" (Mixture of Experts)
     Decorrelationn: "No"               # Apply ensemble decorrelation [Yes/No]
     Generate_ensemble: "pre-trained"   # Ensemble generation: "afresh" or "pre-trained"
     Covariance_localisation: "Yes"     # Apply covariance localization [Yes/No]
@@ -231,6 +231,7 @@ custom:
   model_type: "FNO"           # Neural operator architecture: "FNO" or "TRANSOLVER"
   fno_type: "FNO"             # Operator variant: "FNO" (data-driven) or "PINO" (physics-informed)
   unroll: "TRUE"              # Enable autoregressive training [TRUE/FALSE]
+  K_unroll: 4                 # step truncated BPTT (choose betweeen 1 - steppi) 
   unroll_cost: "AUTO"         # Autoregressive strategy: "AUTO" (model predictions) or "BOTH" (mixed inputs)
   allowable_size: 30          # Maximum allowable nz dimension for FNO architecture
 
